chore: add config system, update docs and tools

--- a/config/settings.json
+++ b/config/settings.json
@@ -18,7 +18,7 @@
   },
   "scheduler": {
     "enabled": true,
-    "timezone": "UTC",
+    "timezone": "Asia/Bangkok",
     "thread_pool_size": 4
   },
   "process": {
